--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
       "connect-assets": "2.2.1",
       "jade": "0.26.1",
       "coffee-script": "1.3.3",
-      "less": "1"
+      "less": "1",
+      "mongojs": ">=0.4.3",
+      "underscore": ">=1.3.3"
    },
    "devDependencies": {},
    "optionalDependencies": {},
