--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "express": "3",
       "connect-assets": "2.2.1",
+      "connect-flash": ">=0.1.0",
       "jade": "0.26.1",
       "coffee-script": "1.3.3",
       "less": "1",
