--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
    "devDependencies": {},
    "optionalDependencies": {},
    "engines": {
-      "node": "0.8.0"
+      "node": "0.8.0",
+      "npm":  "1.1.x"
    }
 }
