--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
    "devDependencies": {},
    "optionalDependencies": {},
    "engines": {
-      "node": "0.8.0",
+      "node": "0.8",
       "npm":  "1.1.x"
+   },
+   "scripts": {
+      "test": "echo Success!"
    }
 }
